--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,11 @@ body {
     box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.2);
 }
 
+/* Styling for text container */
+.fact-text {
+    padding: 20px;
+}
+
 
 /* Dark Theme Styles */
 body {
